adding a rollup job
Adding ability for multiple APIs to pick up rollup jobs

Expose billing pricing endpoint

initial review
